We no longer use llvm-config to obtain various LLVM build directories but instead use the variables set by find_package(LLVM). Also, ensure that SOAAP LLVM's cmake files are being used by setting LLVM_DIR when invoking cmake. So now:
cmake -G Ninja -DCMAKE_BUILD_TYPE=Debug -DLLVM_DIR=$HOME/path/to/llvm/build/share/llvm/cmake BUILD_SHARED_LIBS=OFF ..

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,39 +1,42 @@
 cmake_minimum_required(VERSION 2.8)
 
-if(NOT CMAKE_LLVM_CONFIG)
-  set(CMAKE_LLVM_CONFIG llvm-config)
-endif()
+# Allow user to optionally override LLVM build tree locations.
+set(LLVM_TOOLS_BINARY_DIR "" CACHE PATH "Path to llvm/bin")
+set(LLVM_LIBRARY_DIR "" CACHE PATH "Path to llvm/lib")
+set(LLVM_MAIN_INCLUDE_DIR "" CACHE PATH "Path to llvm/include")
+set(LLVM_BINARY_DIR "" CACHE PATH "Path to LLVM build tree")
+set(LLVM_MAIN_SRC_DIR "" CACHE PATH "Path to LLVM source tree")
 
-# Make sure we can find llvm-config!
-exec_program(${CMAKE_LLVM_CONFIG} ARGS --version  OUTPUT_VARIABLE LLVM_VERSION)                                 
-if("${LLVM_VERSION}" MATCHES "not found")
-  message(FATAL_ERROR "llvm-config not found; may need to set PATH?")
-endif()
+find_package(LLVM REQUIRED NO_CMAKE_PATH)
+list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
 
-exec_program(${CMAKE_LLVM_CONFIG} ARGS --includedir OUTPUT_VARIABLE LLVM_INCDIR)
-exec_program(${CMAKE_LLVM_CONFIG} ARGS --libdir   OUTPUT_VARIABLE LLVM_LIBDIR)
-exec_program(${CMAKE_LLVM_CONFIG} ARGS --src-root OUTPUT_VARIABLE LLVM_SRCDIR)
-exec_program(${CMAKE_LLVM_CONFIG} ARGS --obj-root OUTPUT_VARIABLE LLVM_OBJDIR)
-
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_OBJDIR}/share/llvm/cmake" "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
-
-find_package(LLVM REQUIRED)
+foreach(v
+    TOOLS_BINARY_DIR
+    LIBRARY_DIR
+    MAIN_INCLUDE_DIR
+    BINARY_DIR
+    MAIN_SRC_DIR
+    )
+  if(LLVM_BUILD_${v} AND NOT LLVM_${v})
+    set(LLVM_${v} "${LLVM_BUILD_${v}}")
+  endif()
+endforeach()
 
 include(AddLLVM)
 add_definitions(${LLVM_DEFINITIONS})
 
 if(NOT DEFINED CMAKE_C_COMPILER)
-	set(CMAKE_C_COMPILER ${LLVM_OBJDIR}/bin/clang)
+	set(CMAKE_C_COMPILER ${LLVM_BINARY_DIR}/bin/clang)
 endif()
 
 if(NOT DEFINED CMAKE_CXX_COMPILER)
-	set(CMAKE_CXX_COMPILER ${LLVM_OBJDIR}/bin/clang++)
+	set(CMAKE_CXX_COMPILER ${LLVM_BINARY_DIR}/bin/clang++)
 endif()
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fno-rtti -std=c++11")
 
-# Default to libc++ if installed.                                                                               
+# Default to libc++ if installed
 find_package(LibCXX)
 if (LIBCXX_FOUND)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
@@ -43,15 +46,15 @@ endif()
 set(LLVM_RUNTIME_OUTPUT_INTDIR ${PROJECT_BINARY_DIR}/bin)
 set(LLVM_LIBRARY_OUTPUT_INTDIR ${PROJECT_BINARY_DIR}/lib)
 
-set(LIT ${LLVM_OBJDIR}/bin/llvm-lit CACHE FILE "Location of llvm-lit")
+set(LIT ${LLVM_BINARY_DIR}/bin/llvm-lit CACHE FILE "Location of llvm-lit")
 
-include_directories(${LLVM_INCDIR})
-include_directories(${LLVM_SRCDIR}/lib)
-include_directories(${LLVM_SRCDIR}/runtime/libprofile)
-include_directories(${LLVM_OBJDIR}/include)
+include_directories(${LLVM_MAIN_INCLUDE_DIR})
+include_directories(${LLVM_MAIN_SRC_DIR}/lib)
+include_directories(${LLVM_MAIN_SRC_DIR}/runtime/libprofile)
+include_directories(${LLVM_BINARY_DIR}/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/soaap)
-link_directories(${LLVM_LIBDIR})
+link_directories(${LLVM_LIBRARY_DIR})
 
 add_subdirectory(soaap)
 add_subdirectory(tests)
