libsoaap.so is now libSOAAP.so

--- a/tests/lit.cfg
+++ b/tests/lit.cfg
@@ -74,7 +74,7 @@ include_dir = support.find_include_dir('soaap.h',
 	paths = [ os.path.join(srcdir, 'include') ],
 	notfound_msg = 'Try setting SOAAP_SOURCE_DIR')
 
-libdir = support.find_libdir('libsoaap.*', [ os.path.join(builddir, 'lib') ],
+libdir = support.find_libdir('libSOAAP.*', [ os.path.join(builddir, 'lib') ],
 	notfound_msg = 'Try setting SOAAP_BUILD_DIR')
 
 
