Copy soaap.h to ${build}/include.
This lets us treat a build directory as a complete (and hopefully atomic) SOAAP package, rather than asking for SOAAP_SOURCE_DIR and SOAAP_BUILD_DIR, which could drift apart.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/soaap)
 link_directories(${LLVM_LIBRARY_DIR})
 
+add_subdirectory(include)
 add_subdirectory(soaap)
 add_subdirectory(tests)
 add_subdirectory(tools)
