Also run SOAAP tests that end in '.cc'.
There is at least one test (syscalls/syscalls-fdkey1.cc) that ends in "the other" C++ suffix. Run this one too.

--- a/tests/lit.cfg
+++ b/tests/lit.cfg
@@ -9,7 +9,7 @@ import sys
 # Basic information about this test suite.
 #
 config.name = 'SOAAP'
-config.suffixes = [ '.c', '.cpp', '.ll' ]
+config.suffixes = [ '.c', '.cc', '.cpp', '.ll' ]
 config.excludes = [ 'Inputs' ]
 config.test_format = lit.formats.ShTest()
 
