Add LLVM triple to llvm-lit configuration.
We will need this for platform-specific XFAIL declarations.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -35,6 +35,15 @@ if (DEFINED TEST_C_FLAGS)
 	set(LIT_EXTRA ${LIT_EXTRA} --param=extra_cflags=${TEST_C_FLAGS})
 endif ()
 
+add_custom_command(OUTPUT lit.site.cfg
+        COMMAND clang -v 2>&1
+		| grep Target
+		| awk '{print $2}'
+	        | sh -c 'read T\; echo config.target_triple=\\"$$T\\"'
+	        > lit.site.cfg
+	COMMENT "Checking host's LLVM triple..."
+)
+
 add_custom_target(test
 	COMMAND
 		PATH=${LLVM_BINARY_DIR}/bin:$ENV{PATH} ${LIT}
@@ -43,6 +52,7 @@ add_custom_target(test
 		--param=source_dir=${CMAKE_SOURCE_DIR}
 		--param=output_dir=${CMAKE_CURRENT_BINARY_DIR}
 		${LIT_EXTRA}
+	DEPENDS lit.site.cfg
 	COMMENT "Running test suite")
 
 add_dependencies(test libsoaap)
