--- a/tests/lit.cfg
+++ b/tests/lit.cfg
@@ -46,6 +46,12 @@ if 'output_dir' in lit_config.params:
 
 
 #
+# Site-specific configuration information (e.g. the host triple).
+#
+lit_config.load_config(config, builddir + '/tests/lit.site.cfg')
+
+
+#
 # Find the 'support' module (which may not be in the current PYTHONPATH).
 #
 sys.path.append(os.curdir)
