--- a/soaap/CMakeLists.txt
+++ b/soaap/CMakeLists.txt
@@ -21,6 +21,7 @@ add_llvm_library(SOAAP
   Instrument/PerformanceEmulationInstrumenter.cpp
   OS/FreeBSDSysCallProvider.cpp
   OS/SysCallProvider.cpp
+  OS/Sandbox/NoSandboxPlatform.cpp
   OS/Sandbox/Capsicum.cpp
   OS/Sandbox/SandboxPlatform.cpp
   OS/Sandbox/Seccomp.cpp
