--- a/soaap/CMakeLists.txt
+++ b/soaap/CMakeLists.txt
@@ -25,6 +25,7 @@ add_llvm_library(SOAAP
   OS/Sandbox/Capsicum.cpp
   OS/Sandbox/SandboxPlatform.cpp
   OS/Sandbox/Seccomp.cpp
+  Report/IR/CallGraph.cpp
   Report/IR/Report.cpp
   Report/IR/SourceLocation.cpp
   Report/IR/Vulnerability.cpp
