--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "rapidjson"]
 	path = rapidjson
 	url = https://github.com/miloyip/rapidjson
+[submodule "libxo"]
+	path = libxo
+	url = https://github.com/Juniper/libxo.git
