Add RPC annotations for synchronous receive, and sync send-receive

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,3 +1,5 @@
+link_directories("/home/kg365/workspace/gperftools/install/lib")
+
 add_llvm_executable(soaap
   soaap.cpp
 )
@@ -22,3 +24,4 @@ llvm_map_components_to_libnames(LLVM_LIBS
 )                                                                                                   
 
 target_link_libraries(soaap ${LLVM_LIBS} SOAAP)
+target_link_libraries(soaap profiler)
