--- a/soaap/CMakeLists.txt
+++ b/soaap/CMakeLists.txt
@@ -35,6 +35,7 @@ add_llvm_library(SOAAP
   Util/SandboxUtils.cpp
   Util/ClassifiedUtils.cpp
   Util/TypeUtils.cpp
+  Util/InstUtils.cpp
 )
 
 # link with libxo
