Report where libxo was found.
This will be useful once we can choose between the system and SOAAP vendor
versions of libxo.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ ExternalProject_Add(libxo
 ExternalProject_Get_Property(libxo install_dir)
 include_directories(${install_dir}/include)
 link_directories(${install_dir}/lib)
+message(STATUS "Found libxo: ${install_dir}")
 
 # Default to libc++ if installed
 find_package(LibCXX)
