Add new function-level variadic annotation __soaap_sandboxed(...) to specify that the annotated function should only execute in the 0 or more named sandboxes. Specifying no sandbox means that it should execute in some sandbox (but not in the privileged context).
SOAAP will give warnings about such sandbox-only functions executing in contexts they should'nt be. The privileged equivalent of this annotation is __soaap_privileged.

Command-line options --soaap-output-traces and --soaap-analyses now also accept a "sandboxed" argument to refer to this new analysis.

This closes #15.

--- a/soaap/CMakeLists.txt
+++ b/soaap/CMakeLists.txt
@@ -7,6 +7,7 @@ add_llvm_library(SOAAP
   Common/XO.cpp
   Analysis/VulnerabilityAnalysis.cpp
   Analysis/PrivilegedCallAnalysis.cpp
+  Analysis/SandboxedFuncAnalysis.cpp
   Analysis/CFGFlow/GlobalVariableAnalysis.cpp
   Analysis/CFGFlow/SysCallsAnalysis.cpp
   Analysis/InfoFlow/AccessOriginAnalysis.cpp
