--- a/soaap/CMakeLists.txt
+++ b/soaap/CMakeLists.txt
@@ -39,7 +39,4 @@ add_llvm_library(SOAAP
   Util/InstUtils.cpp
 )
 
-add_dependencies(SOAAP libxo)
-
-# link with libxo
-target_link_libraries(SOAAP xo)
+target_link_libraries(SOAAP ${LIBXO_LIBRARIES})
