Make tests depend on SOAAP binary, not library.
The SOAAP unit tests execute the 'soaap' binary, so we should rebuild it
before running any tests. The binary depends on the library, so we will
still rebuild that too.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -42,4 +42,4 @@ add_custom_target(soaap-test
 	DEPENDS lit.site.cfg
 	COMMENT "Running test suite")
 
-add_dependencies(soaap-test SOAAP)
+add_dependencies(soaap-test bin/soaap)
