Explicitly link against LLVM libs

--- a/soaap/CMakeLists.txt
+++ b/soaap/CMakeLists.txt
@@ -45,3 +45,7 @@ if (TARGET libxo)
 endif()
 
 target_link_libraries(SOAAP xo)
+
+# link LLVM libraries
+llvm_map_components_to_libnames(llvm_libs core ipa transformutils)
+target_link_libraries(SOAAP ${llvm_libs})
