Update SOAAP in accordance with new version of Clang/LLVM: 1) Changes in vtable IR generation 2) Changes in debug metadata 3) Clang/LLVM API changes
Also added another vtable test

--- a/soaap/CMakeLists.txt
+++ b/soaap/CMakeLists.txt
@@ -47,5 +47,5 @@ endif()
 target_link_libraries(SOAAP xo)
 
 # link LLVM libraries
-llvm_map_components_to_libnames(llvm_libs core ipa transformutils)
+llvm_map_components_to_libnames(llvm_libs core transformutils)
 target_link_libraries(SOAAP ${llvm_libs})
